--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-
-/* Sidebar */
 .sidebar {
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
-  padding: 58px 0 0; /* Height of navbar */
+  padding: 58px 0 0;
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
   width: 240px;
-  z-index: -1;
+
+}
+
+@media screen and (min-width: 480px) {
+  #chat-box {
+    margin-left: 15rem;
+  }
+
+}
+@media screen and (max-width: 300px) {
+  #nav-button {
+    display: none;
+  }
+
 }
 
 @media (max-width: 991.98px) {
@@ -40,6 +37,4 @@ code {
   top: 0;
   height: calc(100vh - 48px);
   padding-top: 0.5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
